Fixed alignment of admin menu icons
Joomla 3.1 has introduced the menu icons in the admin top nav again (for components, etc).
However, when using the standard 16x16px sized icons, the alignment is off.
This fix corrects that issue.

#### Testing instructions
If you don't have a component with an icon, add an icon to a component by placing the url (relative to the admin folder) of the icon in the 'img' field of the #__menu table for that component.

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -536,6 +536,9 @@ h6 { font-size: 12px; line-height: 14px; }
 }
 
 // Navbar
+.nav-collapse .nav li a {
+	 background-position: 2px 50%;
+}
 @media (max-width: @navbarCollapseWidth) {
 	.navbar-fixed-top .navbar-inner,
 	.navbar-fixed-top .navbar-inner .container-fluid {
